Fixed sixing issues with About.js, shifted CV button below name and title, removed surrounding div container of CV, change CV button size, added hover/transform CSS, and made other minor changes

--- a/src/components/Styling/About.scss
+++ b/src/components/Styling/About.scss
@@ -36,36 +36,37 @@
   transition: 0.4s ease-in-out;
 }
 
-.cv-button-container {
-  width: 400px;
-  display: flex;
-  justify-content: center;
-  @include respond-to('medium') {
-    width: auto;
-  }
-}
+
 
 .cv-button {
   background: var(--primary) !important;
   height: 60px;
-  width: 300px;
+  width: 200px;
+  margin-top: 10px;
   border-radius: 1rem;
   font-size: 1.25rem;
   font-family: 'Arvo', serif;
   box-shadow: 0 0.2rem 1rem #d9d9d9;
-  transition: 0.2s ease-in-out;
-  &:hover {
+  transition: 0.4s ease-in-out;
+  & a {
     color: white;
+  }
+  &:hover {
+    background-color: var(--secondary) !important;
+    cursor: pointer;
+    transform: translate3d(0, -0.2rem, 0.2rem);
   }
 }
 // description container with name, title, and description
 .description-container {
   width: 700px;
   margin-bottom: 50px;
+  margin-left: 50px;
   text-align: left;
   transition: 0.4s ease-in-out;
   @include respond-to('xl') {
     text-align: center;
+    margin-left: 0px;
   }
 }
 
