--- a/src/components/Styling/Projects.scss
+++ b/src/components/Styling/Projects.scss
@@ -46,10 +46,10 @@
   @include respond-to('medium') {
     width: 400px;
   }
-}
-
-.project-grid:hover {
-  filter: blur(1px) brightness(60%);
-  box-shadow: 0 0 8px var(--primary);
-  cursor: pointer;
+  &:hover {
+    filter: blur(1px) brightness(60%);
+    box-shadow: 0 0 8px var(--primary);
+    cursor: pointer;
+    transform: translate3d(0, -0.5rem, 0.5rem);
+  }
 }
